--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background: #f9f9f9;
 }
 
 h1 {
   text-align: center;
+  text-decoration: underline;
 }
