--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,128 @@
+html {
+  height: 100%;
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: #f9f9f9;
+  font-family: "Source Sans Pro", sans-serif;
+  background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  background-repeat: no-repeat;
+  color: #222;
+}
+
+h1,
+h2 {
+  font-family: "Sansita Swashed", cursive;
+  margin: 0;
 }
 
 h1 {
+  font-size: 3em;
   text-align: center;
+}
+
+h2 {
+  font-size: 2.3em;
   text-decoration: underline;
+}
+
+input {
+  min-height: 50px;
+  border-radius: 2px;
+  border: none;
+  border-bottom: 2px solid #222;
+  padding: 0 10px;
+  font-size: 1.1em;
+}
+
+main {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+::-webkit-input-placeholder {
+  text-transform: none;
+  font-family: "Sansita Swashed", cursive;
+}
+::-moz-placeholder {
+  text-transform: none;
+  font-family: "Sansita Swashed", cursive;
+}
+:-ms-input-placeholder {
+  text-transform: none;
+  font-family: "Sansita Swashed", cursive;
+}
+:-moz-placeholder {
+  text-transform: none;
+  font-family: "Sansita Swashed", cursive;
+}
+header button {
+  height: 40px;
+  width: 50px;
+  background-color: transparent;
+  border: none;
+  vertical-align: top;
+  cursor: pointer;
+  margin: 0 0 0 10px;
+  padding: 0;
+}
+
+#search-button {
+  background-image: url(images/search.svg);
+  background-repeat: no-repeat;
+  transform: rotate(270deg);
+}
+
+#current-location-button {
+  font-family: "Sansita Swashed", cursive;
+  width: 130px;
+  background: #222;
+  font-size: 1em;
+  height: 50px;
+  line-height: 1;
+  color: white;
+  border-radius: 2px;
+}
+
+.container {
+  padding: 2em 0 0;
+}
+
+header {
+  margin: 2em 0 0;
+}
+
+header input[type="search"] {
+  vertical-align: top;
+  width: calc(100% - 207px);
+  text-transform: capitalize;
+}
+
+.wrapper {
+  margin: 3em 0 0;
+}
+.weather-info {
+  display: flex;
+  align-items: center;
+  padding: 20px 25px 20px 0;
+  text-transform: capitalize;
+}
+.weather-info.today {
+  max-width: 75%;
+}
+
+#temperature {
+  font-size: 4em;
+  letter-spacing: -3px;
+}
+
+.city-details {
+  margin: 0 0 0 2em;
+  display: flex;
+  align-items: center;
+}
+
+.city-details .details {
+  margin: 0 30px 0 0;
+  font-size: 1.4em;
+  line-height: 1.5;
 }
