--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,10 @@ h2 {
   text-decoration: underline;
 }
 
+a {
+  color: #222;
+}
+
 input {
   min-height: 50px;
   border-radius: 2px;
@@ -66,6 +70,10 @@ header button {
   padding: 0;
 }
 
+footer {
+  text-align: center;
+}
+
 #search-button {
   background-image: url(images/search.svg);
   background-repeat: no-repeat;
@@ -100,14 +108,21 @@ header input[type="search"] {
 .wrapper {
   margin: 3em 0 0;
 }
+
 .weather-info {
   display: flex;
   align-items: center;
   padding: 20px 25px 20px 0;
   text-transform: capitalize;
 }
+
 .weather-info.today {
   max-width: 75%;
+}
+
+.weather-info .temp {
+  display: flex;
+  align-items: center;
 }
 
 #temperature {
@@ -123,6 +138,6 @@ header input[type="search"] {
 
 .city-details .details {
   margin: 0 30px 0 0;
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 1.5;
 }
