--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
-html {
+html,
+body {
   height: 100%;
+  margin: 0;
 }
 
 body {
   font-family: "Source Sans Pro", sans-serif;
-  background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
-  background-repeat: no-repeat;
   color: #222;
 }
 
@@ -103,7 +103,10 @@ footer {
 }
 
 .container {
-  padding: 2em 0 0;
+  padding: 2em 1em;
+  background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  background-repeat: no-repeat;
+  min-height: 100%;
 }
 
 header {
@@ -179,13 +182,15 @@ header input[type="search"] {
 }
 
 .city-details {
-  margin: 0 0 0 2em;
   display: flex;
   align-items: center;
 }
 
-.city-details .details {
+.city-details .details:first-child {
   margin: 0 30px 0 0;
+}
+
+.city-details .details {
   font-size: 1.2em;
   line-height: 1.5;
 }
@@ -238,5 +243,9 @@ header input[type="search"] {
 
   .weather.forecast {
     justify-content: space-between;
+  }
+
+  .city-details {
+    margin: 0 0 0 2em;
   }
 }
